[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/UI/UI.gd" type="Script" id=1]
[ext_resource path="res://src/UI/Title.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/UI/QuitButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UI/RetryButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/ui_theme.tres" type="Theme" id=5]

[node name="UI" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseOverlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.180392 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" type="VBoxContainer" parent="PauseOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -61.0
margin_top = 20.0
margin_right = 61.0
margin_bottom = 113.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" parent="PauseOverlay/PauseMenu" instance=ExtResource( 4 )]
margin_right = 122.0
margin_bottom = 44.0

[node name="QuitButton" parent="PauseOverlay/PauseMenu" instance=ExtResource( 3 )]
margin_top = 48.0
margin_right = 122.0
margin_bottom = 93.0

[node name="PausedText" parent="PauseOverlay" instance=ExtResource( 2 )]
anchor_top = 0.0
anchor_bottom = 0.0
margin_left = -61.0
margin_top = 124.726
margin_right = 61.0
margin_bottom = 155.726
text = "Paused"

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -192.09
margin_top = 26.727
margin_right = -33.09
margin_bottom = 125.727
theme = ExtResource( 5 )
text = "%s : SCORE
%s : HEALTH"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
